Fix text overflow minor issue

--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -2655,8 +2655,9 @@ label.add {
   width: 200px;
   top: 15px;
   left: 85px;
+  overflow-x: hidden;
   text-overflow: ellipsis;
-  white-space: normal;
+  white-space: nowrap;
 }
 
 #browseAllActivitySpotCategory {
